[package]
name = "slack-giphy"
version = "0.1.0"
authors = ["Simon Sawert <simon@sawert.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0"
serde_yaml = "0.8"
slack = "0.25.0"

[dependencies.reqwest]
version = "0.11.0"
features = [
  "blocking",
  "json"
]
